added uniqid to each excercise

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "uniqid": "^5.4.0"
   }
 }
