--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "css-loader": "^6.6.0",
+    "autoprefixer": "^10.4.8",
+    "css-loader": "^6.7.1",
+    "postcss-loader": "^7.0.1",
+    "sass": "^1.54.4",
+    "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.0",
     "uniqid": "^5.4.0"
   }
 }
