updated json file

--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "weatherapp",
+  "homepage": "https://kpgh46.github.io/fitness-dashboard",
   "version": "1.0.0",
   "description": "",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
-    "build": "webpack"
+    "build": "webpack",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
