removed s from https

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fitness-dashboard",
-  "homepage": "https://kpgh46.github.io/fitness-dashboard",
+  "homepage": "http://kpgh46.github.io/fitness-dashboard",
   "version": "1.0.0",
   "description": "",
   "private": true,
