--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch": "webpack --watch",
     "build": "webpack",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist -main"
   },
   "keywords": [],
   "author": "",
