--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "description": "",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "jest": {
+      "transform": {
+        "^.+\\.jsx?$": "babel-jest"
+      }
+    },
     "watch": "webpack --watch",
     "build": "webpack",
     "predeploy": "npm run build",
@@ -15,7 +20,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.19.0",
     "autoprefixer": "^10.4.8",
+    "babel-jest": "^29.0.2",
     "css-loader": "^6.7.1",
     "gh-pages": "^4.0.0",
     "postcss-loader": "^7.0.1",
