--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.0",
+    "node-fetch": "^3.2.10",
     "uniqid": "^5.4.0"
   },
   "repository": {
